Adds git url to project settings
