# backend/docs/swagger/project.swagger.json
@@ -1582,6 +1582,9 @@
         "updatedAt": {
           "type": "string",
           "format": "date-time"
+        },
+        "gitUrl": {
+          "type": "string"
         }
       }
     },
@@ -1595,6 +1598,9 @@
           "type": "string"
         },
         "description": {
+          "type": "string"
+        },
+        "gitUrl": {
           "type": "string"
         }
       }
@@ -1652,6 +1658,9 @@
           "type": "string"
         },
         "description": {
+          "type": "string"
+        },
+        "gitUrl": {
           "type": "string"
         }
       }
